[FIX] misalignment of buttons with certain dropdowns

--- a/themes/base_files/scss/_tiki-external_scripts_overrides.scss
+++ b/themes/base_files/scss/_tiki-external_scripts_overrides.scss
@@ -29,8 +29,8 @@ div.form-group label.error {
 // Chosen is calculating the widths wrong (too narrow) so this is a crude workaround.
 .tiki .input-group .chosen-container { width: 110% !important; }
 // Lets exclude the above to trackers and file galleries because buttons appear on the second line
-[class*="tiki-admin"], .tiki-view_tracker,
-.tiki-list_file_gallery #sel, .adminoptionbox {
+[class*="tiki-admin"], .tiki-view_tracker, .tiki-list_file_gallery #sel,
+.adminoptionbox, .manage {
 	.input-group .chosen-container {
 		width: auto !important;
 	}
